refactor: refactored shops owner and shops form [#107709190]

--- a/app/views/shop_owners/_form.html.erb
+++ b/app/views/shop_owners/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @shop_owner, :url=>shopowner_create_url, html:{:class => "col s12 white",:id=>"shop-signup-form"} do |f| %>
-<%= f.hidden_field :shop_owner_id, { value: @shop_owner.id } %>
+<%= form_for @shop_owner, url: shopowner_create_url, html: { class: "col s12 white",id: "shop-signup-form"} do |f| %>
+<%= f.hidden_field :shop_owner_id, value: @shop_owner.id %>
 <% if @shop_owner.errors.any? %>
 <div id="error_explanation" class="white">
   <ul>
@@ -11,37 +11,37 @@
 <% end %>
 <div class="row">
   <div class="input-field col s8 offset-s2">
-    <%= f.text_field :first_name,{:class => "validate", :required => true } %>
+    <%= f.text_field :first_name, { class: "validate", required: true } %>
     <%= f.label :first_name %>
   </div>
 </div>
 <div class="row">
   <div class="input-field col s8 offset-s2">
-    <%= f.text_field :last_name, {:class => "validate"} %>
+    <%= f.text_field :last_name, { class: "validate" } %>
     <%= f.label :last_name %>
   </div>
 </div>
 <div class="row">
   <div class="input-field col s8 offset-s2">
-    <%= f.text_field :phone, {:class=>"validate"} %>
+    <%= f.text_field :phone, { class: "validate" } %>
     <%= f.label :phone %>
   </div>
 </div>
 <div class="row">
   <div class="input-field col s8 offset-s2">
-    <%= f.text_field :email, {:class => "validate"} %>
+    <%= f.text_field :email, { class: "validate" } %>
     <%= f.label :email %>
   </div>
 </div>
 <div class="row">
   <div class="input-field col s8 offset-s2">
-    <%= f.password_field :password, {:class => "validate"} %>
+    <%= f.password_field :password, { class: "validate"} %>
     <%= f.label :password %>
   </div>
 </div>
 <div class="row">
   <div class="input-field col s8 offset-s2">
-    <%= f.password_field :confirm_password, {:class => "validate"} %>
+    <%= f.password_field :confirm_password, { class: "validate"} %>
     <%= f.label :confirm_password %>
   </div>
 </div>
