--- a/app/views/shop_owners/new.html.erb
+++ b/app/views/shop_owners/new.html.erb
@@ -7,7 +7,7 @@
 					<div class="center-align">
 						<h5 class="white-text">CREATE YOUR SHOP</h5>
 					</div>
-					<%= render :partial => "form" %>
+					<%= render partial: "form" %>
 					<div class="divider teal darken-3"></div>
 					<p class="center-align white-text">By submiting you agree with our <a href="#" class="teal-text darken-4">Terms of Service</a>
 					</p>
