--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @shop, :class => "col s12", :id=>"shop-signup-form" do |f| %>
+<%= form_for @shop, class: "col s12", id: "shop-signup-form" do |f| %>
  <%= f.hidden_field :shop_owner_id, { value: @shop_owner.id } %>
 <% if @shop.errors.any? %>
     <div id="error_explanation">
@@ -15,7 +15,7 @@
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<%= f.text_field :name,{:class => "validate", :required => true } %>
+						<%= f.text_field :name,{ class: "validate", required: true } %>
 						<%= f.label :name %>
 					</div>
 				</div>
@@ -25,14 +25,14 @@
 							<input id="shop-url-prefix" name="shop-url-prefix" value="www.getmyshop.com/" type="text" class="valdate" disabled>
 						</div>
 						<div class="input-field col s7" id="shop-url-wrapper">
-							<%= f.text_field :url, {:class => "validate"} %>
+							<%= f.text_field :url, { class: "validate" } %>
 							<%= f.label :url %>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<%= f.text_area :description, {:class=>"materialize-textarea"} %>
+						<%= f.text_area :description, { class: "materialize-textarea" } %>
 						<%= f.label :description %>
 					</div>
 				</div>
@@ -48,18 +48,18 @@
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<%= f.text_field :address, {:class => "validate"} %>
+						<%= f.text_field :address, { class: "validate" } %>
 						<%= f.label :address %>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col s10 offset-s1">
 						<div class="input-field col s6">
-							<%= f.text_field :city, {:class => "validate"} %>
+							<%= f.text_field :city, { class: "validate"} %>
 							<%= f.label :city %>
 						</div>
 						<div class="input-field col s6">
-							<%= f.text_field :state, {:class => "validate"} %>
+							<%= f.text_field :state, { class: "validate" } %>
 							<%= f.label :state %>
 						</div>
 					</div>
@@ -67,11 +67,11 @@
 				<div class="row">
 					<div class="col s10 offset-s1">
 						<div class="input-field col s6">
-							<%= f.text_field :country, {:class => "validate"} %>
+							<%= f.text_field :country, { class: "validate" } %>
 							<%= f.label :country %>
 						</div>
 						<div class="input-field col s6">
-							<%= f.text_field :phone, {:class => "validate"} %>
+							<%= f.text_field :phone, { class: "validate" } %>
 							<%= f.label :phone %>
 						</div>
 					</div>
