feat: implement progress bar for upload

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+//= require jquery.fileupload
+//= require jquery.fileupload-ui
+
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "materialize";
 @import "font-awesome-sprockets";
