--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -251,8 +251,12 @@ hr {
 }
 
 .card {
+  width: 300px;
+  height: 200px;
   .card-image {
     display: inline-block;
+    height: 130px;
+    width: 100%;
   }
 }
 
