feat(authentication): completes authentication for shop owners. [finishes #107803086]

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,14 +1,47 @@
 <header>
   <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only"><i class="material-icons">menu</i></a></div>
   <ul id="nav-mobile" class="side-nav fixed">
-    <li class="bold"><a href="about.html" class="waves-effect waves-teal"><i class="material-icons">dashboard</i>
-    <span class="title">Dashboard</span></a></li>
-    <li class="bold active"><a href="getting-started.html" class="waves-effect waves-teal"><i class="material-icons">folder</i>
-    <span class="title">Products</span></a></li>
-    <li class="bold"><a href="getting-started.html" class="waves-effect waves-teal"><i class="material-icons">insert_chart</i><span class="title">Orders</span></a></li>
-    <li class="bold"><a href="http://materializecss.com/mobile.html" class="waves-effect waves-teal"><i class="material-icons">play_arrow</i><span class="title">Coupons</span></a></li>
-    <li class="bold"><a href="http://materializecss.com/mobile.html" class="waves-effect waves-teal"><i class="material-icons">payment</i><span class="title">Transactions</span></a></li>
-    <li class="bold"><a href="showcase.html" class="waves-effect waves-teal"><i class="material-icons">supervisor_account</i><span class="title">Customers</span></a></li>
+    <li class="bold">
+      <a href="about.html" class="waves-effect waves-teal">
+        <i class="material-icons">dashboard</i>
+      <span class="title">Dashboard</span>
+      </a>
+    </li>
+
+    <li class="bold active">
+      <a href="getting-started.html" class="waves-effect waves-teal">
+        <i class="material-icons">folder</i>
+        <span class="title">Products</span>
+      </a>
+    </li>
+
+    <li class="bold">
+      <a href="getting-started.html" class="waves-effect waves-teal">
+        <i class="material-icons">insert_chart</i>
+        <span class="title">Orders</span>
+      </a>
+    </li>
+
+    <li class="bold">
+      <a href="http://materializecss.com/mobile.html" class="waves-effect waves-teal">
+        <i class="material-icons">play_arrow</i>
+        <span class="title">Coupons</span>
+      </a>
+    </li>
+
+    <li class="bold">
+      <a href="http://materializecss.com/mobile.html" class="waves-effect waves-teal">
+        <i class="material-icons">payment</i>
+        <span class="title">Transactions</span>
+      </a>
+    </li>
+
+    <li class="bold">
+      <a href="showcase.html" class="waves-effect waves-teal">
+        <i class="material-icons">supervisor_account</i>
+        <span class="title">Customers</span>
+      </a>
+    </li>
   </ul>
 </header>
 <main>
