--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -29,9 +29,8 @@
       </div>
     </div>
   </div>
-    
+  <%= render partial: 'products/form' %>
   <%= render partial: 'shop_owners_footer' %>
-  <%= render partial: 'products/form', locals: {shop_owner: @shop_owner} %>  
 </main>
 
 
