--- a/app/views/shop_owners/_form.html.erb
+++ b/app/views/shop_owners/_form.html.erb
@@ -47,7 +47,7 @@
 </div>
 <div class="row">
   <div class="input-field col s12 center-align">
-    <button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat teal white-text">Submit</button>
+    <button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent black-text">Submit</button>
   </div>
 </div>
 <% end %>
