--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 	<ul class="collapsible popout" data-collapsible="expandable">
 		<li class="white">
-			<div class="collapsible-header active white-text teal"><i class="material-icons">filter_drama</i>Shop Information</div>
+			<div class="collapsible-header active text-accent teal darken-4"><i class="material-icons">filter_drama</i>Shop Information</div>
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
@@ -38,13 +38,13 @@
 				</div>
 				<div class="row">
 					<div class="col s12">
-						<button onclick="openLocationTab()" class="waves-effect waves-light btn-flat teal white-text right">Next</button>
+						<button type="button" onclick="openLocationTab()" class="waves-effect waves-light btn-flat bg-accent right">Next</button>
 					</div>
 				</div>
 			</div>
 		</li>
 		<li class="white">
-			<div class="collapsible-header white-text teal location-tab"><i class="material-icons">place</i>Shop Location</div>
+			<div class="collapsible-header teal darken-4 text-accent location-tab"><i class="material-icons">place</i>Shop Location</div>
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
@@ -81,7 +81,7 @@
 	</ul>
 	<div class="row">
 		<div class="input-field col s12 center-align">
-			<button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat teal white-text">Create Shop</button>
+			<button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent">Create Shop</button>
 		</div>
 	</div>
 <% end %>
