chore: resolve houndci issues [#107709190]

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,11 +1,11 @@
-$primary-color-dark:   #00796B;
+$primary-color-dark:   #00796b;
 $primary-color:        #009688;
-$primary-color-light:  #B2DFDB;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #FFC107;
+$primary-color-light:  #b2dfdb;
+$primary-color-text:   #ffffff;
+$accent-color:         #ffc107;
 $primary-text-color:   #212121;
 $secondary-text-color: #727272;
-$divider-color:        #B6B6B6;
+$divider-color:        #b6b6b6;
 
 $my-grey: #b2beb5;
 $my-green: #338574;
