--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,7 +14,7 @@
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <%= link_to "FAQ", faq_path, class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
-          <%= link_to "Register Shop", "/shopowners/new", class: 'white-text small-text' %>
+          <%= link_to "Register Shop", signup_path, class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <span  class="white-text small-text">Currency - NGN</span>
             <span class="white-text small-text">&nbsp;|&nbsp;</span>
