--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -9,7 +9,7 @@
 					</div>
 					<%= render :partial => "form" %>
 					<div class="divider teal darken-3"></div>
-					<p class="center-align white-text">By creating a shop you agree with our <a href="#" class="teal-text darken-4">Terms of Service</a></p>
+					<p class="center-align white-text">By creating a shop you agree with our <a href="#" class="terms-link">Terms of Service</a></p>
 				</div>
 			</div>
 		</div>
