--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @shop, class: "col s12", id: "shop-signup-form" do |f| %>
  <%= f.hidden_field :shop_owner_id, { value: @shop_owner.id } %>
-	<% if @shop.errors.any? %>
+  <% if @shop.errors.any? %>
     <div id="error_explanation">
       <ul>
       <% @shop.errors.full_messages.each do |message| %>
@@ -9,79 +9,79 @@
       </ul>
     </div>
   <% end %>
-	<ul class="collapsible popout" data-collapsible="expandable">
-		<li class="white">
-			<div class="collapsible-header active text-accent teal darken-4"><i class="material-icons">filter_drama</i>Shop Information</div>
-			<div class="collapsible-body">
-				<div class="row">
-					<div class="input-field col s10 offset-s1">
-						<%= f.text_field :name,{ class: "validate", required: true } %>
-						<%= f.label :name %>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s10 offset-s1">
-						<div class="input-field col s5">
-							<input id="shop-url-prefix" name="shop-url-prefix" value="www.getmyshop.com/" type="text" class="valdate" disabled>
-						</div>
-						<div class="input-field col s7" id="shop-url-wrapper">
-							<%= f.text_field :url, { class: "validate" } %>
-							<%= f.label :url %>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="input-field col s10 offset-s1">
-						<%= f.text_area :description, { class: "materialize-textarea" } %>
-						<%= f.label :description %>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12">
-						<button type="button" onclick="openLocationTab()" class="waves-effect waves-light btn-flat bg-accent right">Next</button>
-					</div>
-				</div>
-			</div>
-		</li>
-		<li class="white">
-			<div class="collapsible-header teal darken-4 text-accent location-tab"><i class="material-icons">place</i>Shop Location</div>
-			<div class="collapsible-body">
-				<div class="row">
-					<div class="input-field col s10 offset-s1">
-						<%= f.text_field :address, { class: "validate" } %>
-						<%= f.label :address %>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s10 offset-s1">
-						<div class="input-field col s6">
-							<%= f.text_field :city, { class: "validate"} %>
-							<%= f.label :city %>
-						</div>
-						<div class="input-field col s6">
-							<%= f.text_field :state, { class: "validate" } %>
-							<%= f.label :state %>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s10 offset-s1">
-						<div class="input-field col s6">
-							<%= f.text_field :country, { class: "validate" } %>
-							<%= f.label :country %>
-						</div>
-						<div class="input-field col s6">
-							<%= f.text_field :phone, { class: "validate" } %>
-							<%= f.label :phone %>
-						</div>
-					</div>
-				</div>
-			</div>
-		</li>
-	</ul>
-	<div class="row">
-		<div class="input-field col s12 center-align">
-			<button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent">Create Shop</button>
-		</div>
-	</div>
+  <ul class="collapsible popout" data-collapsible="expandable">
+    <li class="white">
+      <div class="collapsible-header teal active white-text"><i class="material-icons">filter_drama</i>Shop Information</div>
+      <div class="collapsible-body">
+        <div class="row">
+          <div class="input-field col s10 offset-s1">
+            <%= f.text_field :name,{ class: "validate", required: true } %>
+            <%= f.label :name %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s10 offset-s1">
+            <div class="input-field col s5">
+              <input id="shop-url-prefix" name="shop-url-prefix" value="www.getmyshop.com/" type="text" class="valdate" disabled>
+            </div>
+            <div class="input-field col s7" id="shop-url-wrapper">
+              <%= f.text_field :url, { class: "validate" } %>
+              <%= f.label :url %>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s10 offset-s1">
+            <%= f.text_area :description, { class: "materialize-textarea" } %>
+            <%= f.label :description %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12">
+            <button type="button" onclick="openLocationTab()" class="waves-effect waves-light btn-flat bg-accent right">Next</button>
+          </div>
+        </div>
+      </div>
+    </li>
+    <li class="white">
+      <div class="collapsible-header teal white-text location-tab"><i class="material-icons">place</i>Shop Location</div>
+      <div class="collapsible-body">
+        <div class="row">
+          <div class="input-field col s10 offset-s1">
+            <%= f.text_field :address, { class: "validate" } %>
+            <%= f.label :address %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s10 offset-s1">
+            <div class="input-field col s6">
+              <%= f.text_field :city, { class: "validate"} %>
+              <%= f.label :city %>
+            </div>
+            <div class="input-field col s6">
+              <%= f.text_field :state, { class: "validate" } %>
+              <%= f.label :state %>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s10 offset-s1">
+            <div class="input-field col s6">
+              <%= f.text_field :country, { class: "validate" } %>
+              <%= f.label :country %>
+            </div>
+            <div class="input-field col s6">
+              <%= f.text_field :phone, { class: "validate" } %>
+              <%= f.label :phone %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </li>
+  </ul>
+  <div class="row">
+    <div class="input-field col s12 center-align">
+      <button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent">Create Shop</button>
+    </div>
+  </div>
 <% end %>
