feat(shop owner edit products):enables shop owners to edit products. [finishes #107906740]

--- a/app/views/shops/_product.html.erb
+++ b/app/views/shops/_product.html.erb
@@ -9,6 +9,7 @@
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><%= product.name %><i class="material-icons right">close</i></span>
       <p><%= product.description %></p>
+      <%= link_to "Edit", edit_shop_product_path(product) %>
     </div>
   </div>    
 </div>
