--- a/app/views/application/_shop_owners_header.html.erb
+++ b/app/views/application/_shop_owners_header.html.erb
@@ -17,7 +17,6 @@
           <span  class="white-text small-text">Currency - NGN</span>
             <span class="white-text small-text">&nbsp;|&nbsp;</span>
             <span class="small-text">
-
               <%= auth_link %>
             </span>
         </div>
@@ -29,7 +28,7 @@
           <div class="left">
             <a class="brand-logo black-text" href="<%= root_path %>">
               <div class="left">
-                <span>Shopify</span>
+                <span>Products Page</span>
               </div>
             </a>
           </div>
