--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -47,23 +47,16 @@
 <main>
   <%= render partial: 'shop_owners_header' %>
 
-  <div class="container vspacer">
-    <div class="col s9">
-      <div class="profile">
-        <div class="result-header">
-          NO PRODUCTS IN STORE
-        </div>
-        <div class="row profile-fields">
-          <div class="no-order-msg center">
-            <p>You currently have no products</p>
-            <a class="modal-trigger waves-effect waves-teal btn-flat" href="#modal1">Add Products</a>
-          </div>
-        </div>
-      </div>
+    <div class="row">
+       <%= render partial: 'product', collection: @shop.products, as: :product %>
     </div>
-  </div>
+
   <%= render partial: 'products/form' %>
   <%= render partial: 'shop_owners_footer' %>
+
+  <div class="fixed-action-btn" style="bottom: 65px; right: 24px; ">
+    <a class="btn-floating btn-large yellow tooltipped" data-position="top" data-delay="50" data-tooltip="Add Product" href="#modal1">
+      <i class="large material-icons">add</i>
+    </a>
+  </div>
 </main>
-
-
