--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -61,16 +61,14 @@
 </header>
 <main>
   <%= render partial: 'shop_owners_header' %>
-
-    <div class="row">
-       <%= render partial: 'product', collection: @shop.products, as: :product %>
-    </div>
+  <%= render partial: 'product', locals: { products: @shop.products } %>
 
   <%= render partial: 'products/form' %>
   <%= render partial: 'shop_owners_footer' %>
+  <%= render partial: 'products/modals/delete_confirmation_dialog' %>
 
-  <div class="fixed-action-btn" style="bottom: 65px; right: 24px; ">
-    <a class="btn-floating btn-large yellow tooltipped" data-position="top" data-delay="50" data-tooltip="Add Product" href="#modal1">
+  <div class="fixed-action-btn product">
+    <a class="btn-floating btn-large tooltipped modal-trigger" data-position="top" data-delay="50" data-tooltip="Add Product" href="#modal1" id="add-product-btn">
       <i class="large material-icons">add</i>
     </a>
   </div>
