--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Shop</h1>
+<%= render layout: "dashboard_layout" do %>
+  <div class="row edit-form-container">
+    <h3 class="center-align edit-form-heading">Edit Shop Profile </h3>
+    <%= render "edit_form" %>
+  </div>
 
-<%= render 'form' %>
+<!-- <h1>Editing Shop</h1> -->
 
-<%= link_to 'Show', @shop %> |
-<%= link_to 'Back', shops_path %>
+<%#= render 'form' %>
+
+<%#= link_to 'Show', @shop %> 
+<%#= link_to 'Back', shops_path %>
+<% end %>
