feat: deliver shop profile editing ui [deliver #126486441]

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -59,4 +59,4 @@ $shop-container-color: rgba(255, 255, 255, 0.95);
 $shop-overlay-color: rgba(0, 0, 0, 0.3);
 $shop-signup-font: Assistant;
 $shop-border-shadow: rgba(0, 0, 0, 0.5);
-$gray-180: rgb(180,180,180);
+$gray-180: rgb(180, 180, 180);
