feat: finished shop profile edit [#122423531]

--- a/app/views/shops/_edit_form.html.erb
+++ b/app/views/shops/_edit_form.html.erb
@@ -60,7 +60,7 @@ Materialize.toast(msg)
 </div>
 <div class="row">
 <div class="input-field col s12 center-align">
-  <button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent">Edit Shop</button>
+  <button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat bg-accent">Update</button>
 </div>
 </div>
 <% end %>
