--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -250,49 +250,120 @@ hr {
   font-size: 1.4em !important;
 }
 
-.card-title{
-  color: black !important;
-}
-
-.card{
+#products-card {
   width: 300px;
   height: auto;
   margin: 10px;
-  .card-image{
+
+  .card-title {
+    color: white;
+  }
+
+  .card-image {
     height: 200px;
     width: 300px;
+
+    img {
+      height: 100%;
+    }
   }
 }
 
-.card-image img{
-  height: 100%;
+
+#add-product-btn {
+  background-color: #B0B5BC;
 }
 
-a.btn-floating.btn-large.yellow {
-  background-color: #FFC107 !important;
+#add-product-btn:hover {
+  background-color: #FFC107;
 }
 
-.hspace{
+.hspace {
   margin: 70px;
 }
 
+
 div#modal1 {
   border-radius: 20px;
-  background-color: rgba(60,60,60,0.5);
+  background-color: #fafafa;
+  min-height: 700px !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  background-color: white;
+  overflow: hidden;
+  z-index: 2001 !important;
+
+  .modal-footer {
+    background-color: #B6B6B6;
+  }
+
+  label {
+    font-size: 1.0rem;
+    color: #212121;
+  }
 }
 
-input{
-  color: white;
-}
-input[type=submit]{
+#create_product {
   color: black;
 }
 
 h4 {
   font-size: 1.6rem;
-  color: whitesmoke;
+  color: black;
 }
 
-.modal .modal-footer {
-  background-color: #B6B6B6;
+.ui.horizontal.divider {
+  background: transparent;
+  font-size: 30px;
+  position: relative;
+  top: -20px;
+}
+
+.action-right {
+  display: block;
+  position: relative;
+  left: calc(100% - 70px);
+}
+
+#card-holder {
+  margin-top: 10px;
+}
+
+.page-footer {
+  position: fixed;
+  z-index: 2000;
+}
+
+.strike {
+  display: block;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap; 
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+span {
+  position: relative;
+  display: inline-block;
+}
+
+.strike > span:before,
+.strike > span:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 9999px;
+  height: 1px;
+  background: black;
+}
+
+.strike > span:before {
+  right: 100%;
+  margin-right: 15px;
+}
+
+.strike > span:after {
+  left: 100%;
+  margin-left: 15px;
 }
