--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,57 +1,53 @@
  <div id="modal1" class="modal modal-fixed-footer">
   <%= form_for( @product, html: { multipart: true } ) do |f| %>
     <div class="modal-content">
-      <a class="btn btn-floating red" style="margin-left: 630px; position: fixed" data-position="top" data-delay="50" data-tooltip="Close"><i class="material-icons">not_interested</i></a>
       <h4 class="center-align">Enter Product Information</h4>
-      
-      <% if flash[:errors] %>
-        <div id="error_explanation">
-          <ul>
-          <% flash[:errors].each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-          </ul>
+
+      <div class="field">
+        <%= f.label :name, "Product Name" %><br>
+        <%= f.text_field :name, { required: true, placeholder: "E.g. Television" } %>
+      </div>
+
+      <div class="field">
+        <%= f.label :description, "Product Description" %><br>
+        <%= f.text_field :description, { required: true, length: 50, maxlength: 50, placeholder: "E.g. Entertains Viewers" }  %>
+      </div>
+
+      <div class="field">
+        <%= f.label :quantity, "Product Quantity" %><br>
+        <%= f.text_field :quantity, { required: true, placeholder: "E.g. 10" }  %>
+      </div>
+
+      <div class="field">
+        <%= f.label :brand, "Product Brand" %><br>
+        <%= f.text_field :brand, { required: true, placeholder: "E.g. Toshiba" } %>
+      </div>
+
+      <div class="field">
+        <%= f.label :size, "Product Size" %><br>
+        <%= f.text_field :size, { required: true, placeholder: "E.g. 10 inches" } %>
+      </div>
+
+      <div class="field">
+        <%= f.label :price, "Product Price" %> <span>(&#8358;)</span> <br>
+        <%= f.text_field :price, { required: true, placeholder: "E.g. 100" } %>
+      </div>
+
+
+      <div class="file-field input-field">
+        <div class="btn">
+          <span>Upload Image</span>
+          <%= f.file_field :image, { required: true } %>
         </div>
-      <% end %>
-
-      <div class="field">
-        <%= f.label :name %><br>
-        <%= f.text_field :name, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :description %><br>
-        <%= f.text_field :description, { required: true }  %>
-      </div>
-
-      <div class="field">
-        <%= f.label :quantity %><br>
-        <%= f.text_field :quantity, { required: true }  %>
-      </div>
-
-      <div class="field">
-        <%= f.label :brand %><br>
-        <%= f.text_field :brand, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :size %><br>
-        <%= f.text_field :size, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :price %><br>
-        <%= f.text_field :price, { required: true } %>
-      </div>
-
-      <div class="field">
-        <%= f.label :image %><br>
-        <%= f.file_field :image %>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text" placeholder="Click to select product image">
+        </div>
       </div>
 
     </div>
     <div class="modal-footer">
-      <%= f.submit class: "waves-effect waves-green btn-flat " %>
+      <%= f.submit class: "btn-flat", id: "create_product" %>
     </div>
   <% end %>
 </div>
+
