--- a/app/views/shops/_product.html.erb
+++ b/app/views/shops/_product.html.erb
@@ -1,22 +1,56 @@
-<div class="col s4 m3 l3 hspace">
-  <div class="card hoverable">
-    <div class="card-image">
-      <%= image_tag product.image.preview.url%>
-      <span class="card-title"><%= product.name %></span>
-    </div>
-    <div class="card-content">
-      <p><%= product.description %></p>
-    </div>
-    <div class="card-action">
-      <div style="margin-left: 130px">
-        <a class="btn-floating yellow tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Product"><i class="material-icons"  href="<%= edit_shop_product_path(product) %>" >mode_edit</i></a>
-        <a class="btn-floating red tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Product"><i class="material-icons">delete</i></a>
+<% if products.any? %>
+
+  <div class="strike">
+    <span><%= pluralize(products.count, "Product")%> Available in Store</span>
+  </div>
+
+  <div class="row">
+    <% products.each do |product| %>
+      <div class="col s4 m3 l3 hspace" id="card-holder">
+        <div class="card hoverable" id="products-card">
+          <div class="card-image">
+            <%= image_tag product.image.preview.url, class: "activator"%>
+            <span class="card-title"><%= product.name %></span>
+          </div>
+          <div class="card-content">
+            <p><%= product.description %></p>
+          </div>
+          <div class="card-action">
+            <div class ="action-right">
+              <a class="btn-floating green tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Product"  href="<%= edit_shop_product_path(product) %>" ><i class="material-icons">mode_edit</i></a>
+              <a class="btn-floating red tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Product"><i class="material-icons">delete</i></a>
+            </div>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= product.name %><i class="material-icons right">close</i></span>
+            <blockquote> <%= product.description %> </blockquote>
+            <p> <span>Prize</span>: <%= product.price %> </p>
+            <p> <span>Brand</span>: <%= product.brand %> </p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <div class="fixed-action-btn" style="bottom: 65px; right: 24px; ">
+    <a class="btn-floating btn-large tooltipped" data-position="top" data-delay="50" data-tooltip="Add Product" href="#modal1" id="add-product-btn">
+      <i class="large material-icons">add</i>
+    </a>
+  </div>
+<% else %>
+  <div class="container vspacer">
+    <div class="col s9">
+      <div class="profile">
+        <div class="result-header">
+          NO PRODUCTS IN STORE
+        </div>
+        <div class="row profile-fields">
+          <div class="no-order-msg center">
+            <p>You currently have no products</p>
+            <a class="modal-trigger waves-effect waves-teal btn-flat" href="#modal1">Add Products</a>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><%= product.name %><i class="material-icons right">close</i></span>
-      <p> <%= product.description %> </p>
-    </div>
   </div>
-</div>
+<% end %>
+
