--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,5 +1,9 @@
 <header>
-  <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only"><i class="material-icons">menu</i></a></div>
+  <div class="container">
+    <a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only">
+      <i class="material-icons">menu</i>
+    </a>
+  </div>
   <ul id="nav-mobile" class="side-nav fixed">
     <li class="bold">
       <a href="about.html" class="waves-effect waves-teal">
@@ -46,17 +50,7 @@
 </header>
 <main>
   <%= render partial: 'shop_owners_header' %>
-
-    <div class="row">
-       <%= render partial: 'product', collection: @shop.products, as: :product %>
-    </div>
-
+  <%= render partial: 'product', locals: { products: @shop.products } %>
   <%= render partial: 'products/form' %>
-  <%= render partial: 'shop_owners_footer' %>
-
-  <div class="fixed-action-btn" style="bottom: 65px; right: 24px; ">
-    <a class="btn-floating btn-large yellow tooltipped" data-position="top" data-delay="50" data-tooltip="Add Product" href="#modal1">
-      <i class="large material-icons">add</i>
-    </a>
-  </div>
 </main>
+<%= render partial: 'shop_owners_footer' %>
