--- a/app/views/shops/_dashboard_layout.html.erb
+++ b/app/views/shops/_dashboard_layout.html.erb
@@ -57,7 +57,7 @@
           <div class="side-bar-menu">
           <a href="#" class="side-bar-link"><i class="material-icons">settings</i><div class="side-bar-menu-text center-align">Settings</div></a>
           </div>
-          <div class="" style="position: fixed; bottom: 0; background: white; padding: 10px 5px; width: 64px">
+          <div class="live-help-cont" style="">
             <div class="center-align" style=""><i class="material-icons">live_help</i></div>
           </div>
         </div>
