feat(shop dashboard UI): Adds the dashboard UI for new shops that haven't fully setup i.e have not added products. [finishes #126486649]

--- a/app/views/shops/_dashboard_layout.html.erb
+++ b/app/views/shops/_dashboard_layout.html.erb
@@ -15,6 +15,11 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li>
             <a href="#">
+              <i class="material-icons">search</i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
               <i class="material-icons">lock_outline</i>
             </a>
           </li>
@@ -36,33 +41,63 @@
       <div class="side-bar-menu-cont">
         <div class="center-align">
           <div class="side-bar-menu">
-            <a href="#" class="side-bar-link"><i class="material-icons">dashboard</i>
-            <div class="side-bar-menu-text center-align">Dashboard</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">dashboard</i>
+              <div class="side-bar-menu-text center-align">Dashboard</div>
+            </a>
           </div>
+
           <div class="side-bar-menu">
-            <a href="#" class="side-bar-link"><i class="material-icons">supervisor_account</i> <div class="side-bar-menu-text center-align">Customers</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">supervisor_account</i>
+              <div class="side-bar-menu-text center-align">Customers</div>
+            </a>
           </div>
+
           <div class="side-bar-menu">
-          <a href="#" class="side-bar-link"><i class="material-icons">turned_in_not</i><div class="side-bar-menu-text center-align">Products</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">turned_in_not</i>
+              <div class="side-bar-menu-text center-align">Products</div>
+            </a>
           </div>
+
           <div class="side-bar-menu">
-          <a href="#" class="side-bar-link"><i class="material-icons">shop</i><div class="side-bar-menu-text center-align">Orders</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">shop</i>
+              <div class="side-bar-menu-text center-align">Orders</div>
+            </a>
           </div>
+          
           <div class="side-bar-menu">
-          <a href="#" class="side-bar-link"><i class="material-icons">redeem</i><div class="side-bar-menu-text center-align">Coupon</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">redeem</i>
+              <div class="side-bar-menu-text center-align">Coupon</div>
+            </a>
           </div>
+
           <div class="side-bar-menu">
-          <a href="#" class="side-bar-link"><i class="material-icons">visibility</i><div class="side-bar-menu-text center-align">Preview</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">visibility</i>
+              <div class="side-bar-menu-text center-align">Preview</div>
+            </a>
           </div>
+
           <div class="side-bar-menu">
-          <a href="#" class="side-bar-link"><i class="material-icons">settings</i><div class="side-bar-menu-text center-align">Settings</div></a>
+            <a href="#" class="side-bar-link">
+              <i class="material-icons">settings</i>
+              <div class="side-bar-menu-text center-align">Settings</div>
+            </a>
           </div>
-          <div class="live-help-cont" style="">
-            <div class="center-align" style=""><i class="material-icons">live_help</i></div>
+
+          <div class="live-help-cont">
+            <div class="center-align">
+              <i class="material-icons">live_help</i>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    
     <div class="content-area col s10 offset-s1" style="">
       <%= yield %>
     </div>
