--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -206,8 +206,8 @@ a > h3 {
   padding: 10px 5px;
 
   i {
-    padding-top: 18px;
     font-size: 2.28rem;
+    padding-top: 18px;
   }
 }
 
@@ -219,14 +219,14 @@ a > h3 {
 
 .steps {
   p {
-    border-radius: 50%;
     background: $primary-color-dark;
-    color: white;
-    width: 60px;
-    height: 60px;
-    text-align: center;
-    padding: 17px;
+    border-radius: 50%;
+    color: $primary-color-text;
     font-size: 18px;
+    height: 60px;
+    padding: 17px;
+    text-align: center;
+    width: 60px;
   }
 }
 
