fix: addresses houndci issues

--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -197,7 +197,7 @@ a > h3 {
   width: 64px;
 }
 
-.products-column{
+.products-column {
   width: 50em !important;
 }
 
@@ -239,10 +239,11 @@ a > h3 {
 
 .steps-title {
   a {
-    color: $primary-text-color;
+    color: $primary-color-dark;
     font-weight: bold;
   }
-  a:hover { 
+  
+  a:hover {
     text-decoration: underline;
   }
 }
@@ -251,7 +252,8 @@ a > h3 {
   a {
     color: $secondary-text-color;
   }
-  a:hover { 
+
+  a:hover {
     text-decoration: underline;
   }
 }
