refactor: modify products view to use layout

--- a/app/views/shops/products.html.erb
+++ b/app/views/shops/products.html.erb
@@ -1,4 +1,13 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
-  <%= render partial: 'product', collection: @products, as: :product %>
+  <%= render partial: 'product', locals: { products: @products } %>
+
+  <%= render partial: 'products/form' %>
+  <%= render partial: 'products/modals/delete_confirmation_dialog' %>
+
+  <div class="fixed-action-btn product">
+    <a class="btn-floating btn-large tooltipped modal-trigger" data-position="top" data-delay="50" data-tooltip="Add Product" href="#modal1" id="add-product-btn">
+      <i class="large material-icons">add</i>
+    </a>
+  </div>
 </div>
