--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
  <div id="modal1" class="modal modal-fixed-footer">
+  <% @product = Product.new %>
   <%= form_for( @product, html: { multipart: true } ) do |f| %>
     <div class="modal-content">
       <h4 class="center-align">Enter Product Information</h4>
