--- a/app/views/shops/_product.html.erb
+++ b/app/views/shops/_product.html.erb
@@ -32,7 +32,7 @@
   </div>
 <% else %>
   <div class="container vspacer">
-    <div class="col s9">
+    <div class="col s9 products-column">
       <div class="profile">
         <div class="result-header">
           NO PRODUCTS IN STORE
